--- a/index.html
+++ b/index.html
@@ -6,10 +6,49 @@
     <meta charset="UTF-8">
     <title>Psychic Game</title>
 
+    <!--Favicon -->
+    <link rel="icon"
+          type="image/png"
+          href="assets/images/favicon%20(1).ico">
+
+
     <!--  Bootstrap and other css links  -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <!--  Font link  -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+
 </head>
-<body>
+
+<body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+
+
+        <div>
+            <h1>The Psychic Game (aka Keyboard Whack-a-mole)</h1>
+            <h2>Guess What letter I'm thinking of</h2>
+            <h3 id="wins-text">Wins: </h3>
+            <h3 id="losses-text">Losses: </h3>
+            <h3 id="userchoice-text">Guesses Left: </h3>
+            <h3 id="guesses-text">Your guesses so far: </h3>
+        </div>
+
+
+
+        <br>
+        <br>
+        <br>
+        <br><br>
+
+
+
+
+    </div>
+
 
 
 
